[gd_scene load_steps=24 format=2]

[ext_resource path="res://images/spritesheets/Player/Player_head_sheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]
[ext_resource path="res://images/spritesheets/Player/Player_body_sheet.png" type="Texture" id=3]
[ext_resource path="res://scenes/player/shortsword.tres" type="SpriteFrames" id=4]
[ext_resource path="res://shaders/Flash.tres" type="Material" id=5]
[ext_resource path="res://images/spritesheets/Player/Player_death_sheet.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 66, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 132, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 198, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 66, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 132, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 198, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 264, 0, 66, 66 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 66, 0, 66, 66 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": false,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": false,
"name": "down",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 34.2186
height = 41.3328

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 24.7109, 48.9616 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 62.4581, 33.1806 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 54.6798, 33.2836 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )
SPEED = 300
GRAVITY = 32
JUMPFORCE = 1024
KNOCKBACK_FORCE = 512

[node name="Body" type="AnimatedSprite" parent="."]
material = ExtResource( 5 )
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
animation = "idle"
playing = true

[node name="Head" type="AnimatedSprite" parent="."]
material = ExtResource( 5 )
scale = Vector2( -2, 2 )
frames = SubResource( 13 )
animation = "idle"

[node name="hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.5874, 10.3181 )
shape = SubResource( 14 )

[node name="Weapon" type="AnimatedSprite" parent="."]
frames = ExtResource( 4 )
animation = "idle"

[node name="AttackCollision" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="side" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( 58.416, 11.4938 )
shape = SubResource( 15 )
disabled = true

[node name="up" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( 27.0344, -19.4665 )
shape = SubResource( 16 )
disabled = true

[node name="down" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( 34.2292, 47.1085 )
shape = SubResource( 17 )
disabled = true

[node name="Effect_dmg_body" type="Tween" parent="."]

[node name="Effect_dmg_head" type="Tween" parent="."]

[connection signal="animation_finished" from="Weapon" to="." method="_on_Weapon_animation_finished"]
[connection signal="body_entered" from="AttackCollision" to="." method="_on_AttackCollision_body_entered"]
